# LLM-Refusal-Evaluation

./: .gitignore  Makefile  README.md  merge_results.py  pyproject.toml
configs/: Qwen3-4B-Instruct-2507.yaml  Qwen3-8B-FP8.yaml  Qwen3-Next-80B-A3B-Thinking-Uncensored.yaml  Qwen3-Next-80B-A3B-Thinking.yaml  Qwen3_5-27B.yaml  Qwen3_5-9B-beavertails.yaml  Qwen3_5-9B.yaml  example-gguf.yaml  gemma-3-4b-it.yaml  test-combined-sample.yaml
src/: answer_generator.py  answer_generator_gguf.py  compliance_quality.py  compute_refusal_score.py  dataset_adapters.py  llm_judge.py  llm_judge_gguf.py  refusal_judge_prompt.py  utils.py
