[project]
name = "oss-refusal-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.6.0",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0.3",
    "vllm>=0.16.0",
]

# Override vllm's transformers<5 constraint to get qwen3_5 model support
[tool.uv]
constraint-dependencies = []
override-dependencies = [
    "transformers>=5.2.0",
]
extra-index-url = ["https://wheels.vllm.ai/nightly"]
prerelease = "if-necessary-or-explicit"

[[tool.uv.index]]
name = "vllm-nightly"
url = "https://wheels.vllm.ai/nightly"
explicit = true

[tool.uv.sources]
vllm = { index = "vllm-nightly" }

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
