[project]
name = "oss-refusal-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.0",
    "pyyaml>=6.0.3",
    "vllm>=0.18.0",
]

# Override vllm's transformers<5 constraint to get qwen3_5 model support.
# vllm 0.18 pins transformers<5 but Qwen3.5 requires transformers>=5.2.
# This override forces uv to allow transformers 5.x alongside vllm 0.18.
[tool.uv]
constraint-dependencies = []
override-dependencies = [
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
